updated: state function returns. added: state color categorize